<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/home_act_button1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/home_act_string1"
     />

    <Button
        android:id="@+id/home_act_button2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/home_act_string2"
        />

    <Button
        android:id="@+id/home_act_button3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/home_act_string3"
        />

    <Button
        android:id="@+id/home_act_button4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/home_act_string4"
         />
</LinearLayout>