<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:ignore="RtlHardcoded">

    <Button
        android:id="@+id/obj_act_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/add"/>

    <EditText
        android:id="@+id/obj_act_editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/obj_act_button1"
        android:hint="@string/enter_new_note"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <TextView
        android:id="@+id/obj_act_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/obj_act_editText1"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/click_to_remove"
        android:textSize="12sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/obj_act_recyclerView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/obj_act_textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:scrollbars="vertical"/>

</RelativeLayout>
